syntax = "proto3";

package kvstore;

// 操作类型枚举
enum OperationType {
  SET = 0;
  GET = 1;
  DELETE = 2;
  NOOP = 3;
}

// 错误码枚举
enum ErrorCode {
  OK = 0;
  NOT_LEADER = 1;
  TIMEOUT = 2;
  NOT_FOUND = 3;
}

service KvStore {
  rpc ClientCommand (CommandRequest) returns (CommandResponse) {}
}

message CommandRequest {
  string key = 1;
  string value = 2;
  OperationType operation_type = 3;
}

message CommandResponse {
  bool success = 1;
  string value = 2;
  string leader_hint = 3;
  ErrorCode error_code = 4;
}

// 为了兼容现有代码，保留这些消息
message GetRequest {
  string key = 1;
  bool linearizable = 2;
}

message GetResponse {
  bool success = 1;
  string value = 2;
}